--- a/.travis.yml
+++ b/.travis.yml
@@ -20,10 +20,12 @@ addons:
 
 before_install:
   - if [ -z ${NUMPY_VER} ]; then
-      echo 'Using latest numpy';
+      # Make sure travis uses latest numpy, not pre-installed version
+      pip install -q numpy --upgrade;
     else
       pip install -q numpy==$NUMPY_VER;
     fi
+  - pip install "matplotlib<3.3"
   - pip install pytest-cov
   - pip install pytest-flake8
   - pip install coveralls
